--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       "@skyra/timestamp": "^1.0.0",
       "chalk": "^4.1.0",
       "discord.js-light": "slow/discord.js-light",
-      "discord.js": "discord.js",
+      "discord.js": "^11.6.4",
       "discord.js-selfbot": "discord.js-selfbot",
       "dotenv": "github:andreialecu/dotenv#feat-multiline",
       "node-fetch-retry": "^2.0.0",
