--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "@skyra/timestamp": "^1.0.0",
       "chalk": "^4.1.0",
       "discord.js-light": "^4.3.1",
+      "discord.js": "slow/discord.js#master",
       "dotenv": "github:andreialecu/dotenv#feat-multiline",
       "node-fetch-retry": "^2.0.0",
       "erlpack": "hammerandchisel/erlpack",
