--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "@discordjs/uws": "^10.149.0",
       "@skyra/timestamp": "^1.0.0",
       "chalk": "^4.1.0",
-      "discord.js-light": "^4.2.0",
+      "discord.js-light": "github:slow/discord.js-light#14fe4b2ea5db852ed660f1f5819fb481fe11c4e4",
+      "discord.js": "github:slow/discord.js#597016d2e704dced068ef0c914aeba6fa49e327d",
       "dotenv": "github:andreialecu/dotenv#feat-multiline",
       "node-fetch-retry": "^2.0.0",
       "erlpack": "hammerandchisel/erlpack",
